--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
         "@types/jest": "^26.0.15",
         "@types/node": "^12.0.0",
         "@types/react": "^16.9.56",
+        "@types/react-autosuggest": "^10.1.5",
         "@types/react-dom": "^16.9.8",
         "axios": "^0.24.0",
         "bootstrap": "^5.1.3",
         "react": "^16.14.0",
+        "react-autosuggest": "^10.1.0",
         "react-dom": "^16.14.0",
         "react-query": "^3.33.5",
         "react-scripts": "4.0.3",
@@ -47,9 +49,9 @@
         ]
     },
     "devDependencies": {
+        "husky": "^7.0.0",
         "node-sass": "4.14.1",
-        "prettier": "^2.4.1",
-        "husky": "^7.0.0"
+        "prettier": "^2.4.1"
     },
     "proxy": "https://www.metaweather.com"
 }
