--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
+        "@testing-library/react-hooks": "^7.0.2",
         "@testing-library/user-event": "^12.1.10",
         "@types/jest": "^26.0.15",
         "@types/node": "^12.0.0",
@@ -18,6 +19,7 @@
         "react-dom": "^16.14.0",
         "react-query": "^3.33.5",
         "react-scripts": "4.0.3",
+        "react-test-renderer": "^17.0.2",
         "typescript": "^4.1.2",
         "web-vitals": "^1.0.1"
     },
@@ -50,6 +52,7 @@
     },
     "devDependencies": {
         "husky": "^7.0.0",
+        "msw": "^0.35.0",
         "node-sass": "4.14.1",
         "prettier": "^2.4.1"
     },
