--- a/package.json
+++ b/package.json
@@ -10,15 +10,14 @@
         "@types/jest": "^26.0.15",
         "@types/node": "^12.0.0",
         "@types/react": "^16.9.56",
-        "@types/react-autosuggest": "^10.1.5",
         "@types/react-dom": "^16.9.8",
         "axios": "^0.24.0",
         "bootstrap": "^5.1.3",
         "react": "^16.14.0",
-        "react-autosuggest": "^10.1.0",
         "react-dom": "^16.14.0",
         "react-query": "^3.33.5",
         "react-scripts": "4.0.3",
+        "react-select": "^5.2.1",
         "react-test-renderer": "^17.0.2",
         "typescript": "^4.1.2",
         "web-vitals": "^1.0.1"
