--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "nab-weather-forecast",
     "version": "0.1.0",
     "private": true,
+    "homepage": "https://nab-weather-forecast-tan.herokuapp.com",
     "dependencies": {
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
